# RISE-VIO

./: .clang-format  .gitignore  README.md
config/: euroc_mono_imu.yaml  gvins.yaml  viode_mono_imu.yaml  visualization.rviz
docker/: docker_run.sh
rb_vins/: .clang-format  CMakeLists.txt  package.xml
rb_vins/ROS/: drawer_rviz.cc  drawer_rviz.h  fusion_ros.cc  fusion_ros.h
rb_vins/cmake/: FindGlog.cmake
rb_vins/launch/: rb_vins.launch  rb_vins_euroc.launch  rb_vins_rviz.launch  rb_vins_viode.launch
rb_vins/rb_vins/: misc.cc  misc.h  rb_vins.cc  rb_vins.h
rb_vins/rb_vins/common/: angle.h  earth.h  eigentypes.h  gpstime.h  logging.h  rotation.h  timecost.h  types.h
rb_vins/rb_vins/factors/: gnss_factor.h  marginalization_factor.h  marginalization_info.h  pose_parameterization.h  reprojection_factor.h  reprojection_factor_w.h  residual_block_info.h
rb_vins/rb_vins/fileio/: filebase.h  fileloader.cc  fileloader.h  filesaver.cc  filesaver.h
rb_vins/rb_vins/morefactors/: geometry.hpp  optimization.hpp  visualprior_factor.h
rb_vins/rb_vins/morefuncs/: GNC_EPNP.h  filefuncs.h  polynomial.cc  utility.cc  utility.h
rb_vins/rb_vins/preintegration/: imu_error_factor.h  imu_mix_prior_factor.h  imu_pose_prior_factor.h  integration_state.h  preintegration.h  preintegration_base.cc  preintegration_base.h  preintegration_earth.cc  preintegration_earth.h  preintegration_earth_odo.cc  preintegration_earth_odo.h  preintegration_factor.h  preintegration_normal.cc  preintegration_normal.h  preintegration_odo.cc  preintegration_odo.h
rb_vins/rb_vins/tracking/: camera.cc  camera.h  cameramei.cc  cameramei.h  drawer.cc  drawer.h  feature.h  frame.cc  frame.h  map.cc  map.h  mappoint.cc  mappoint.h  tracking.cc  tracking.h
scripts/: calc_delay.py  search_bug.py  show_extrinsic.py  show_points.py  show_statistics.py  show_tracking.py  show_trajectory.py  show_trajectory_viode.py
